<resources>
    <string name="app_name">ArtisanMusic</string>

    <string name="about_name">不畏浮云遮望眼</string>
    <string name="about_github">https://github.com/1900Star</string>
    <string name="about_sign">O ever youthful, O ever weeping.</string>
    <string name="about_project_introduce">

       ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器。会尽可能的实现锤子音乐播放器已有的功能，
        也会去除一些功能。比如去除:云音乐和联网搜索，主要还是播放本地音乐为主。 同时也会增加一些个人觉得有趣的交互，
        比如增加了类似QQ音乐的左右滑动切换上/下一曲的交互。
    </string>
    <string name="project_url">https://github.com/1900Star/SmartisanMusicPlayer</string>
    <string name="project_introduce">关于项目</string>

    <string name="child_view_not">SwipeItemLayout的子视图不符合规定</string>

    //*********音乐
    <string name="short_line">-</string>
    <string name="clear_all_favorite">清空</string>
    <string name="play_all">播放全部</string>
    <string name="music_add_time">添加时间</string>
    <string name="music_play_frequency">播放次数</string>
    <string name="music_score">评分</string>
    <string name="song_name">歌曲名</string>
    <string name="play_list">播放列表</string>
    <string name="music_artisan">艺术家</string>
    <string name="singer">歌手:</string>
    <string name="song_names">歌名:</string>
    <string name="music_song">歌曲</string>
    <string name="music_album">专辑</string>
    <string name="album_tile">平铺</string>
    <string name="album_list">列表</string>
    <string name="random_play">随机播放</string>
    <string name="add_new_play_list">新建播放列表</string>
    <string name="add_to_play_list">加到播放列表</string>
    <string name="add_to_play_queue">加到播放队列</string>
    <string name="rename_tile">重命名播放列表</string>
    <string name="load_music">正在拼命加载音乐,请稍候 -_-</string>
    <string name="cancel">取消</string>
    <string name="continues">继续</string>
    <string name="save_and_add">保存并添加</string>
    <string name="all_condition">全部</string>
    <string name="complete">完成</string>
    <string name="choice_operation">请选择操作</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="about">关于</string>
    <string name="favorite">喜欢</string>
    <string name="backups_favorite_song">备份收藏歌曲</string>
    <string name="recovery_favorite_song">恢复收藏歌曲</string>
    <string name="search_history">搜索历史</string>
    <string name="share_me">分享</string>
    <string name="clear_edit">清空输入框</string>
    <string name="not_search_result">无搜索结果</string>
    <string name="scanner_music">扫描本地音乐</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_delete">删除</string>
    <string name="lyrics">歌词</string>
    <string name="select_operation">选择操作</string>
    <string name="delete_play_list">删除列表</string>
    <string name="set_play_time">设定定时播放时间</string>
    <string name="timing_close_play">定时关闭播放</string>
    <string name="edit_play_list">编辑列表</string>
    <string name="baidu_key">4502b57559</string>
    <string name="app_info">ArtisanMusicPlayer 仿照锤子音乐播放器写的一个本地音乐播放器。 https://github.com/1900Star/SmartisanMusicPlayer </string>
    <string name="crash_log">CrashLog</string>
    <string name="take_photo">拍照</string>
    <string name="storage_permissions">存储权限未允许</string>
    <string name="choice_photo">从相册中选择照片</string>
    <string name="camera_not_open">摄像头权限未开启</string>
    <string name="go_open">去开启</string>
    <string name="delete_error_lyric">删除错误歌词</string>
    <string name="song_not_favorite">该歌曲还没有添加到收藏文件</string>
    <string name="retry_search_lyrics">重新搜索歌词</string>
    <string name="scanner_config">扫描配置</string>
    <string name="scanner_one_minute">不扫描60S以下的歌曲</string>
    <string name="scanner_one_m">不扫描1M以下的歌曲</string>
    <string name="start_scanner_music">开始扫描</string>
    <!--    "正在倒计时", "无", "15 分", "30 分", "1 小时", "1 小时 30 分", "2 小时"-->

    <string name="counting_down">正在倒计时</string>
    <string name="no_set_up">无</string>
    <string name="fifteen_minute">15 分</string>
    <string name="thirty_minute">30 分</string>
    <string name="an_hour">1 小时</string>
    <string name="one_and_a_half_hours">1 小时 30 分</string>
    <string name="two_hours">2 小时</string>
    <string name="confirm_delete">确定要删除 </string>
    <string name="song_list"> 歌曲列表吗？</string>
    <string name="delete_all_favorite">确定删除所有收藏歌曲？</string>
    <string name="time_remaining">剩余时间</string>
    <string name="storage_permission">请打允许存储的读写权限，否则无法加载音乐!</string>
    <string name="picture_permission">请允许图片读取权限</string>
    <string name="notify_permission">请允许通知权限</string>
    <string name="camera_permission">请允许相机权限</string>
    <string name="zh">简体中文</string>
    <string name="us">English</string>
    <string name="switch_language">切换语言</string>
    <string name="apply_lyrics">应用歌词</string>
    <string name="album_wall">专辑墙</string>
    <string name="version_name">版本名</string>
    <string name="version_info">版本信息</string>
    <string name="version_number">版本号</string>
    <string name="request_failed">请求失败</string>
</resources>