<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginTop="2dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_music_category_paly"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@null"
        android:src="@drawable/btn_playing_all_selector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_music_category_songname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_category_songname_down_selector"
            android:gravity="center"
            android:text="@string/song_name"
            android:textColor="@color/colorWhite"

            />


        <TextView
            android:id="@+id/tv_music_category_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_category_score_selector"
            android:gravity="center"
            android:text="@string/music_score"
            android:textColor="@color/textDes" />


        <TextView
            android:id="@+id/tv_music_category_frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_category_score_selector"
            android:gravity="center"
            android:text="@string/music_play_frequency"
            android:textColor="@color/textDes" />


        <TextView
            android:id="@+id/tv_music_category_addtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_category_views_selector"
            android:gravity="center"
            android:text="@string/music_add_time"
            android:textColor="@color/textDes" />

    </LinearLayout>
</LinearLayout>
