<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/tabbar_bg"
        android:gravity="center"
        android:text="@string/scanner_config"
        android:textColor="@color/tabbarDownTv"
        android:textSize="@dimen/bigLyrics"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_config_scanner_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@drawable/item_iv_selector"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/scanner_one_minute"
            android:textColor="@color/aboutSign" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_config_scanner_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@drawable/item_iv_selector"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/scanner_one_m"
            android:textColor="@color/aboutSign" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_scanner_cancel"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/add_btn_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_cancel_selector"
            android:textStyle="bold" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@color/seekBarN"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_scanner_continue"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/add_btn_selector"
            android:gravity="center"
            android:text="@string/start_scanner_music"
            android:textColor="@color/text_cancel_selector"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
