<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/time_picker_widget_header">

        <TextView
            android:id="@+id/tv_time_cancel"
            android:layout_width="58dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:background="@drawable/shape_btn_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/lyricsNormal"
            android:textSize="@dimen/bigLyrics" />

        <TextView
            android:id="@+id/tv_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/set_play_time"
            android:textColor="@color/lyricsNormal"
            android:textSize="@dimen/smallLyrics"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time_complete"
            android:layout_width="58dp"
            android:layout_height="28dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:background="@drawable/shape_btn_selector"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="@color/lyricsNormal"
            android:textSize="@dimen/bigLyrics" />
    </RelativeLayout>


    <com.yibao.music.view.WheelView
        android:id="@+id/wheel_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/time_picker_widget_bottom" />


</LinearLayout>