<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shape_btn_edit_selector"
        android:gravity="center"
        android:minWidth="48dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/tv_edit"
        android:textColor="@color/textDes"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_music_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:layout_marginStart="-6dp"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLength="18"
        android:singleLine="true"
        android:text="@string/music_song"
        android:textColor="@color/music_activity_title_selector"
        android:textSize="@dimen/big_tv"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_btn_edit_selector"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/iv_title_search_"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:background="@drawable/shape_btn_delete_selector"
        android:gravity="center"
        android:text="@string/tv_delete"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

