<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="13dp"
    android:layout_marginEnd="13dp"
    android:gravity="center"
    app:cardCornerRadius="8dp"
    app:cardElevation="0.05dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="30dp">


        <TextView
            android:id="@+id/tv_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/version_info"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/version_number"
            android:textColor="@color/textDes"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_info_1"
            app:layout_constraintTop_toBottomOf="@id/tv_info_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/textDes"
            app:layout_constraintStart_toEndOf="@id/tv_info_2"
            app:layout_constraintTop_toTopOf="@id/tv_info_2" />


        <TextView
            android:id="@+id/tv_version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="12"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_info_2"
            app:layout_constraintTop_toTopOf="@id/tv_info_2" />


        <TextView
            android:id="@+id/tv_info_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/version_name"
            android:textColor="@color/textDes"

            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_info_1"
            app:layout_constraintTop_toBottomOf="@id/tv_info_2" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_info_3"
            app:layout_constraintTop_toTopOf="@id/tv_info_3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>